--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     </header>
     <main>
       <div class="gallery"></div>
+      <div class="message"></div>
       <div class="button-section">
         <button type="button" class="load-more">Load more</button>
       </div>
